--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,12 +6,22 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Set html and body to full height */
+html, body {
+	height: 100%;
+	margin: 0; /* Remove any default margin */
+	padding: 0; /* Remove any default padding */
+	background: linear-gradient(135deg, #ffb2ee, #cca8ff); /* Your gradient */
+}
+  
+
+
 .navbar {
 	padding: 0.01rem;
 }
 
 .gradient-bottom-right {
-	background: linear-gradient(135deg, #a855f7, #6366f1);
+	background: linear-gradient(135deg, #fb9ce6, #ad7bf2);
 }
 
 .bg-clip-text {
@@ -20,3 +30,6 @@
 	-webkit-background-clip: text;
 }
 
+
+
+  
